# transformer

./: .gitignore  README.md  environment.yml  pyproject.toml
configs/: default.yml  train_lm.yml  train_seq2seq.yml
runs/test/training/: config.yml
scripts/: test.sh  test_lm.sh  test_seq2seq.sh  train.sh  train_lm.sh  train_seq2seq.sh
src/transformer/: test_lm.py  test_seq2seq.py  train.py  train_lm.py  train_seq2seq.py
src/transformer/data/: datasets.py  registry.py
src/transformer/data/builders/: lm.py  seq2seq.py
src/transformer/models/: attention.py  decoder.py  encoder.py  ffn.py  lm.py  transformer.py
src/transformer/models/architectures/: transformer_lm.py  transformer_seq2seq.py
src/transformer/models/blocks/: decoder.py  encoder.py
src/transformer/models/embeddings/: position.py
src/transformer/models/lm/: decoder_lm.py  transformer_lm.py
src/transformer/models/seq2seq/: decoder_seq2seq.py  encoder_seq2seq.py  transformer_seq2seq.py
src/transformer/tokenization/bpe/: model.py  tokenizer.py  trainer.py
src/transformer/training/: trainer.py  trainer_lm.py  trainer_seq2seq.py
src/transformer/utils/: position.py  tokenizer.py  vocab.py
